[package]
name = "mavlink-param-cli"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "*"
chrono = "*"
clap = "3.0.0-beta.1"
console = "*"
dialoguer = "*"
indicatif = "*"
mavlink = "*"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
skim = "*"
smol = "*"
