[package]
name = "mavlink-cli"
version = "0.1.0"
authors = ["wucke13"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "*"
once_cell = "*"

clap = "3.0.0-beta.1"
console = "*"
dialoguer = "*"
indicatif = "*"
textwrap = { version = "*", features = [ "terminal_size" ] }

mavlink = "*"
async-mavlink = "*"

chrono = "*"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"

skim = "*"

smol = "*"
futures = "*"
